; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_memory-util.c_explicit_bzero_safe.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_memory-util.c_explicit_bzero_safe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @explicit_bzero_safe(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ugt i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @memset_func(i8* %8, i8 signext 0, i64 %9)
  br label %11

11:                                               ; preds = %7, %2
  %12 = load i8*, i8** %3, align 8
  ret i8* %12
}

declare dso_local i32 @memset_func(i8*, i8 signext, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
